@@ -1,5 +1,12 @@
 2010-07-08  Omair Majid  <omajid@redhat.com>
 
+	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java:
+	(reFrame): Pass the panel to the constructor, dont set it yourself.
+	(PluginAppletViewer): Set the panel to be the passed in object and only
+	then add it to the list of all panels.
+
+2010-07-08  Omair Majid  <omajid@redhat.com>
+
 	PR icedtea/460
 	* plugin/icedteanp/java/netscape/security/ForbiddenTargetException.java:
 	New file. Some applets, for legacy support, expect this class to be
